[gd_scene load_steps=3 format=3 uid="uid://gfft2lb1mbkj"]

[ext_resource type="Script" path="res://Steam.gd" id="1_4v400"]
[ext_resource type="Script" path="res://main.gd" id="1_oprno"]

[node name="main" type="Node2D"]
script = ExtResource("1_oprno")

[node name="Steam" type="Node" parent="."]
script = ExtResource("1_4v400")

[node name="Button" type="Button" parent="."]
offset_right = 175.0
offset_bottom = 139.0
text = "HOST"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="Lobby_Container" type="ScrollContainer" parent="."]
offset_left = 177.0
offset_top = 4.0
offset_right = 968.0
offset_bottom = 319.0

[node name="Lobbies" type="VBoxContainer" parent="Lobby_Container"]
layout_mode = 2

[node name="Refresh" type="Button" parent="."]
offset_top = 138.0
offset_right = 175.0
offset_bottom = 277.0
text = "Refresh"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Refresh" to="." method="_on_refresh_pressed"]
